--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
 
-<h1>Old & New</h1>  
+<h1>Old & Old</h1>  
 <p>This is some random text to test the site.</p> 
 <p>This is some Other random text that makes this site look less sparse</p>  
 
