added additional base files

--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
+    <head>
+        <title>Old & New</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="app.css">
+    </head>
 
 <body>
 
-
-
-<h1>Old & Old</h1>  
-<p>This is some random text to test the site.</p> 
-<p>This is some Other random text that makes this site look less sparse</p>  
-
-
-
-
+    <h1>Old & New</h1>  
+    <p>This is some random text to test the site.</p> 
+    <p>This is some Other random text that makes this site look less sparse</p>  
 
 </body>
 
