--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 <body>
 
-    <h1>Old & New</h1>  
+
+    <h1><img src="img/logo-black.svg" alt="Old & New"></h1>  
     <p>This is some random text to test the site.</p> 
     <p>This is some Other random text that makes this site look less sparse</p>  
 
