added header to the site

--- a/index.html
+++ b/index.html
@@ -8,11 +8,28 @@
 
 <body>
 
+<header>
+    <a href="#" class="social">Instagram</a>
+    <a href="#"><h1><img src="img/logo-black.svg" alt="Old & New" class="logo"></h1></a>
+    <div class="menu-area"> 
+        <div class="menu-ball">
+            <div class="nav-toggle">
+            <div class="burger burger1"></div>
+            <div class="burger burger2"></div>
+            </div>
+        </div>
+    </div>
+</header>
 
-    <h1><img src="img/logo-black.svg" alt="Old & New"></h1>  
-    <p>This is some random text to test the site.</p> 
-    <p>This is some Other random text that makes this site look less sparse</p>  
+
+
+
+
+
 
 </body>
 
 </html>
+
+<script src="js/animation.js"></script>
+<script src="js/header.js"></script>
