added menu to site & profile page

--- a/index.html
+++ b/index.html
@@ -28,15 +28,39 @@
     </div>
 </header>
 
+<div class="menu">
+    <div class="menu-container">
+        <a href="www.google.co.uk">
+            <div class="nav-area--wrap">
+            <div class="nav-item" data-speed="0.1" style="left: 326px; top: 50px;">Profile</div>
+            </div>
+        </a>
+  
+        <a href="www.google.co.uk">
+            <div class="nav-area--wrap">
+                <div class="nav-item" data-speed="0.1" style="left: 326px; top: 50px;">Collections</div>
+            </div>
+        </a>
+    
+        <a href="www.google.co.uk">
+            <div class="nav-area--wrap">
+                <div class="nav-item" data-speed="0.1" style="left: 326px; top: 50px;">Email</div>
+            </div>
+        </a>
+    
+        <a href="www.google.co.uk">
+            <div class="nav-area--wrap">
+                <div class="nav-item" data-speed="0.1" style="left: 326px; top: 50px;">Contact</div>
+            </div>
+        </a>
+
+    </div>
+</div>
 
 
-
-
-
+<script src="js/menu.js"></script>
+<script src="js/animation.js"></script>
 
 </body>
 
 </html>
-
-<script src="js/animation.js"></script>
-<script src="js/header.js"></script>
