added parallax section setup on profile page

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -65,20 +65,31 @@
                 <h1 class="hero-title--fullwidth">New</h1>
         </section>
 
-        <section class="profile-content">
-            <div>
-                <img src="../img/portrait-img.jpg">
+        <section class="profile">
+            <div class="profile-content">
+                <div class="parallax-img">
+                    <img src="../img/portrait-img.jpg">
+                </div>
+                <div class="dot"></div>
+                <div class="content">
+                    <p>Lorem ipsum dolor amet man braid mustache actually twee echo park vape swag shaman flannel.Pork belly stumptown migas, cronut chicharrones tilde messenger bag portland sartorial tote bag jean shorts craft beer.</p>
+                    <p>Four dollar toast edison bulb vape, crucifix narwhal hoodie.In order to work with professionalism and quality while developing as independent designers, the nomadic nature of our studio instigates us to think of new ways of dealing with our clients, whether to make a project or adapt the process to a specific context.</p>
+                </div>
             </div>
-            <p>Lorem ipsum dolor amet man braid mustache actually twee echo park vape swag shaman flannel.Pork belly stumptown migas, cronut chicharrones tilde messenger bag portland sartorial tote bag jean shorts craft beer. Four dollar toast edison bulb vape, crucifix narwhal hoodie.In order to work with professionalism and quality while developing as independent designers, the nomadic nature of our studio instigates us to think of new ways of dealing with our clients, whether to make a project or adapt the process to a specific context.</p>
-
         </section>
-
-
-
-
 
     </main>
 
+    <footer>
+            <div class="footer-wrap">
+                <div class="social-links">
+                    <a href="#">EMAIL</a>
+                    <a href="#">INSTAGRAM</a>
+                    <a href="#">VSCO</a>
+                </div>
+                <div class="credit">© old&new 2019 — Code by <a href="#"><span>Jason Booth</span></a></div>
+            </div>  
+    </footer>
 
 
 <script src="../js/menu.js"></script>
