added parallax movement

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
 
-<script src="js/data.js"></script>  
+<script src="js/main.js"></script>  
 <script src="js/menu.js"></script>
 <script src="js/animation.js"></script>
 
