Added preloader for site

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -16,6 +16,10 @@
 <body>
 
     <div class="progress"></div>
+    <div class="loader">
+        <div class="loader-line"></div>
+        <div class="loader-mask"></div>
+    </div>
 
     <header>
         <a href="#" class="social-about">Instagram</a>
@@ -94,7 +98,8 @@
     </footer>
 
 
- <script src="../js/parallax.js"></script>
+<script src="../js/loader.js"></script>
+<script src="../js/parallax.js"></script>
 <script src="../js/menu.js"></script>
 <script src="../js/animation.js"></script>
 <script src="../js/main.js"></script>
