restructured profile in folder structure

--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
         <title>Old & New | Profile</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../app.css">
+        <link rel="stylesheet" href="app.css">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="author" content="name">
@@ -23,7 +23,7 @@
 
     <header>
         <a href="#" class="social-about">Instagram</a>
-        <a href="../index.html"><h1><img src="../img/logo.svg" alt="Old & New" class="logo"></h1></a>
+        <a href="../index.html"><h1><img src="img/logo.svg" alt="Old & New" class="logo"></h1></a>
         <div class="menu-area"> 
             <div class="menu-ball">
                 <div class="nav-toggle">
@@ -74,7 +74,7 @@
         <section class="profile">
             <div class="profile-content">
                 <div class="parallax-img" data-parallax="-0.1">
-                    <img src="../img/portrait-img.jpg">
+                    <img src="img/portrait-img.jpg">
                 </div>
                 <div class="dot" data-parallax="0.2"></div>
                 <div class="content">
@@ -98,11 +98,11 @@
     </footer>
 
 
-<script src="../js/loader.js"></script>
-<script src="../js/parallax.js"></script>
-<script src="../js/menu.js"></script>
-<script src="../js/animation.js"></script>
-<script src="../js/main.js"></script>
+<script src="js/loader.js"></script>
+<script src="js/parallax.js"></script>
+<script src="js/menu.js"></script>
+<script src="js/animation.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 
