--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- MENU -->
     <div class="menu">
         <div class="menu-container">
-            <a href="profile/profile.html">
+            <a href="/profile.html">
                 <div class="nav-area--wrap">
                 <div class="nav-item" data-speed="0.1" style="left: 326px; top: 50px;">Profile</div>
                 </div>
