--- a/profile.html
+++ b/profile.html
@@ -18,12 +18,14 @@
     <div class="progress"></div>
     <div class="loader">
         <div class="loader-line"></div>
-        <div class="loader-mask"></div>
+        <div class="loader-page--description">
+            <span><p>Stay</p></span><span><p>weird</p></span>
+        </div>
     </div>
 
     <header>
         <a href="#" class="social-about">Instagram</a>
-        <a href="../index.html"><h1><img src="img/logo.svg" alt="Old & New" class="logo"></h1></a>
+        <a href="index.html"><h1><img src="img/logo.svg" alt="Old & New" class="logo"></h1></a>
         <div class="menu-area"> 
             <div class="menu-ball">
                 <div class="nav-toggle">
@@ -37,7 +39,7 @@
     <!-- MENU -->
     <div class="menu">
         <div class="menu-container">
-            <a href="profile/profile.html">
+            <a href="profile.html">
                 <div class="nav-area--wrap">
                 <div class="nav-item" data-speed="0.1" style="left: 326px; top: 50px;">Profile</div>
                 </div>
