added footer links animation

--- a/profile.html
+++ b/profile.html
@@ -91,9 +91,9 @@
     <footer>
             <div class="footer-wrap">
                 <div class="social-links">
-                    <a href="#">EMAIL</a>
-                    <a href="#">INSTAGRAM</a>
-                    <a href="#">VSCO</a>
+                    <span><a href="#">EMAIL</a></span>
+                    <span><a href="#">INSTAGRAM</a></span>
+                    <span><a href="#">VSCO</a></span>
                 </div>
                 <div class="credit">© old&new 2019 — Code by <a href="#"><span>Jason Booth</span></a></div>
             </div>  
