added before css pseudo to profile text

--- a/profile.html
+++ b/profile.html
@@ -79,7 +79,7 @@
                     <img src="img/portrait-img.jpg">
                 </div>
                 <div class="dot" data-parallax="0.2"></div>
-                <div class="content">
+                <div class="profile-info">
                     <p>Lorem ipsum dolor amet man braid mustache actually twee echo park vape swag shaman flannel.Pork belly stumptown migas, cronut chicharrones tilde messenger bag portland sartorial tote bag jean shorts craft beer.</p>
                     <p>Four dollar toast edison bulb vape, crucifix narwhal hoodie.In order to work with professionalism and quality while developing as independent designers, the nomadic nature of our studio instigates us to think of new ways of dealing with our clients, whether to make a project or adapt the process to a specific context.</p>
                 </div>
