--- a/profile.html
+++ b/profile.html
@@ -155,7 +155,7 @@
                     <span><a href="#">INSTAGRAM</a></span>
                     <span><a href="#">VSCO</a></span>
                 </div>
-                <div class="credit">© old&new 2019 — Code by <span><a href="#">Jason Booth</a></span></div>
+                <div class="credit"><span><a>Code by</a></span> <span><a href="#">Jason Booth</a></span></div>
             </div>  
     </footer>
 
