added video and homepage header

--- a/index.html
+++ b/index.html
@@ -28,10 +28,17 @@
         </div>
     </header>
 
+    <div class="loader">
+        <div class="loader-line"></div>
+        <div class="loader-page--description">
+            <span><p>Stay</p></span><span><p>weird</p></span>
+        </div>
+    </div>
+
     <!-- MENU -->
     <div class="menu">
         <div class="menu-container">
-            <a href="/profile.html">
+            <a href="profile.html">
                 <div class="nav-area--wrap">
                 <div class="nav-item" data-speed="0.1" style="left: 326px; top: 50px;">Profile</div>
                 </div>
@@ -58,10 +65,16 @@
         </div>
     </div>
 
+    <!-- <section class="video-container">
+        <video src="img/test.mp4" width="1920" height="1080" autoplay="" loop="" muted="" playsinline=""></video>
+    </section> -->
 
-<script src="js/main.js"></script>  
+
+<script src="js/loader.js"></script>
+<script src="js/parallax.js"></script>
 <script src="js/menu.js"></script>
 <script src="js/animation.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 
