added contact page and js file for the parallax

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Old & New | Profile</title>
+        <title>Old & New | Contact</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="app.css">
@@ -115,30 +115,24 @@
     </div>
 
     <main data-is-dark="true">
-        <section class="profile-hero"></section>
+        <section class="contact-hero"></section>
 
-        <section class="hero-title">
-                <h1 class="hero-title--fullwidth">New</h1>
-        </section>
-
-        <section class="profile">
-            <div class="profile-content">
-                <div class="parallax-img" data-parallax="-0.1">
-                    <img src="img/portrait-img.jpg">
-                </div>
-                <div class="dot" data-parallax="0.2"></div>
-                <div class="profile-info">
-                    <div class="info-wrap">
-                        <div class="info-mask"></div>
-                        <p>Four dollar toast edison bulb vape, crucifix narwhal hoodie.In order to work with professionalism and quality while developing as independent designers, the nomadic nature of our studio instigates us to think of new ways of dealing with our clients, whether to make a project or adapt the process to a specific context.</p>
-                    </div>
-                    <div class="info-wrap">
-                        <div class="info-mask"></div>
-                        <p>Four dollar toast edison bulb vape, crucifix narwhal hoodie.In order to work with professionalism and quality while developing as independent designers.</p>
+        <section class="contact-title">
+                <h1 class="contact-title--fullwidth"><span>Say</span><span>Hi</span></h1>
+                <div class="contact-info--wrap">
+                    <div class="emoji">&#x1F4F8</div>
+                    <p>If you're interested in working or collaborating together say hi! If not, get the fuck off my site.</p>
+                    <div class="contact-page--links">
+                        <a href="#">Email</a>
+                        <a href="#">Instagram</a>
+                        <a href="#">VSCO</a>
                     </div>
                 </div>
-            </div>
+
+                <div class="dot" data-parallax="-0.3"></div>
+                <div class="dot-2" data-parallax="0.7"></div>
         </section>
+
 
     </main>
 
@@ -157,7 +151,7 @@
 
 
 <script src="js/loader.js"></script>
-<script src="js/parallax.js"></script>
+<script src="js/parallax-contact.js"></script>
 <script src="js/menu.js"></script>
 <script src="js/animation.js"></script>
 <script src="js/main.js"></script>
