added collections page

--- a/contact.html
+++ b/contact.html
@@ -99,13 +99,13 @@
                 </div>
             </a>
         
-            <a href="profile/collections.html">
+            <a href="collections.html">
                 <div class="nav-area--wrap">
                     <div class="nav-item" data-speed="0.1" style="left: 326px; top: 50px;">Collections</div>
                 </div>
             </a>
         
-            <a href="/contact">
+            <a href="contact.html">
                 <div class="nav-area--wrap">
                     <div class="nav-item" data-speed="0.1" style="left: 326px; top: 50px;">Contact</div>
                 </div>
@@ -123,9 +123,9 @@
                     <div class="emoji">&#x1F4F8</div>
                     <p>If you're interested in working or collaborating together say hi! If not, get the fuck off my site.</p>
                     <div class="contact-page--links">
-                        <a href="#">Email</a>
-                        <a href="#">Instagram</a>
-                        <a href="#">VSCO</a>
+                        <span><a href="#">Email</a></span>
+                        <span><a href="#">Instagram</a></span>
+                        <span><a href="#">VSCO</a></span>
                     </div>
                 </div>
 
