--- a/index.html
+++ b/index.html
@@ -63,9 +63,70 @@
         <video src="img/test.mp4" width="1920" height="1080" autoplay="" loop="" muted="" playsinline=""></video>
     </section> -->
 
+    <ul class="pagination">
+        <li><a class="" href="#first"></a></li>
+        <li><a class="" href="#second"></a></li>
+        <li><a class="" href="#third"></a></li>
+        <li><a class="" href="#fourth"></a></li>
+    </ul>
+
+    <section class="panel panel1">
+        <div class="collection">
+            <div class="collection-wrap">
+                <img src="img/portrait-img.jpg">
+                <h1>AMS</h1>
+            </div>
+        </div>
+    </section>
+
+    <section class="panel panel2">
+        <div class="collection">
+            <div class="collection-wrap">
+                <img src="img/portrait-img.jpg">
+                <h1>AMS</h1>
+            </div>
+        </div>
+    </section>
+
+    <section class="panel panel3">
+        <div class="collection">
+            <div class="collection-wrap">
+                <img src="img/portrait-img.jpg">
+                <h1>AMS</h1>
+            </div>
+        </div>
+    </section>
+
+    <section class="panel panel4">
+        <div class="collection">
+            <div class="collection-wrap">
+                <img src="img/portrait-img.jpg">
+                <h1>AMS</h1>
+            </div>
+        </div>
+    </section>
+              
+
+    <footer>
+            <div class="footer-wrap">
+                <div class="social-links">
+                    <span><a href="#">EMAIL</a></span>
+                    <span><a href="#">INSTAGRAM</a></span>
+                    <span><a href="#">VSCO</a></span>
+                </div>
+                <div class="credit">
+                    <span><a class="coded-by">Code by</a></span> <span><a href="#">Jason Booth</a></span>
+                </div>
+            </div>  
+    </footer>
+
+
+
+<script src="js/jquery-min.js"></script>
+<script src="js/scrollify.js"></script> 
+<script src="js/scroll.js"></script> 
 
 <script src="js/loader.js"></script>
-<script src="js/parallax.js"></script>
 <script src="js/menu.js"></script>
 <script src="js/animation.js"></script>
 <script src="js/main.js"></script>
