--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
         <div class="collection">
             <div class="collection-wrap">
                 <img src="img/portrait-img.jpg">
-                <h1>AMS</h1>
+                <span>
+                    <h1>AMS</h1>
+                </span>
             </div>
         </div>
     </section>
@@ -83,7 +85,9 @@
         <div class="collection">
             <div class="collection-wrap">
                 <img src="img/portrait-img.jpg">
-                <h1>AMS</h1>
+                <span>
+                    <h1>AMS</h1>
+                </span>
             </div>
         </div>
     </section>
@@ -92,7 +96,9 @@
         <div class="collection">
             <div class="collection-wrap">
                 <img src="img/portrait-img.jpg">
-                <h1>AMS</h1>
+                <span>
+                    <h1>AMS</h1>
+                </span>
             </div>
         </div>
     </section>
@@ -101,13 +107,15 @@
         <div class="collection">
             <div class="collection-wrap">
                 <img src="img/portrait-img.jpg">
-                <h1>AMS</h1>
+                <span>
+                    <h1>AMS</h1>
+                </span>
             </div>
         </div>
     </section>
               
 
-    <footer>
+    <!-- <footer>
             <div class="footer-wrap">
                 <div class="social-links">
                     <span><a href="#">EMAIL</a></span>
@@ -118,7 +126,7 @@
                     <span><a class="coded-by">Code by</a></span> <span><a href="#">Jason Booth</a></span>
                 </div>
             </div>  
-    </footer>
+    </footer> -->
 
 
 
