img transition tweeks

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
     <section class="panel panel1">
         <div class="collection">
             <div class="collection-wrap">
-                <img src="img/portrait-img.jpg">
+                <span class="img-span">
+                    <img src="img/portrait-img.jpg">
+                </span>
                 <span>
                     <h1>AMS</h1>
                 </span>
@@ -84,7 +86,9 @@
     <section class="panel panel2">
         <div class="collection">
             <div class="collection-wrap">
-                <img src="img/portrait-img.jpg">
+                <span class="img-span">
+                    <img src="img/portrait-img.jpg">
+                </span>
                 <span>
                     <h1>AMS</h1>
                 </span>
@@ -95,7 +99,9 @@
     <section class="panel panel3">
         <div class="collection">
             <div class="collection-wrap">
-                <img src="img/portrait-img.jpg">
+                <span class="img-span">
+                    <img src="img/portrait-img.jpg">
+                </span>
                 <span>
                     <h1>AMS</h1>
                 </span>
@@ -106,7 +112,9 @@
     <section class="panel panel4">
         <div class="collection">
             <div class="collection-wrap">
-                <img src="img/portrait-img.jpg">
+                <span class="img-span">
+                    <img src="img/portrait-img.jpg">
+                </span>
                 <span>
                     <h1>AMS</h1>
                 </span>
