added different styling to title animation

--- a/index.html
+++ b/index.html
@@ -76,9 +76,12 @@
                 <span class="img-span">
                     <img src="img/portrait-img.jpg">
                 </span>
-                <span>
-                    <h1>AMS</h1>
-                </span>
+                <div class="title-wrap">
+                    <div class="title-mask"></div>
+                    <span>
+                        <h1>AMS</h1>
+                    </span>
+                </div>
             </div>
         </div>
     </section>
@@ -89,9 +92,12 @@
                 <span class="img-span">
                     <img src="img/portrait-img.jpg">
                 </span>
-                <span>
-                    <h1>AMS</h1>
-                </span>
+                <div class="title-wrap">
+                    <div class="title-mask"></div>
+                    <span>
+                        <h1>LDN</h1>
+                    </span>
+                </div>
             </div>
         </div>
     </section>
@@ -102,9 +108,12 @@
                 <span class="img-span">
                     <img src="img/portrait-img.jpg">
                 </span>
-                <span>
-                    <h1>AMS</h1>
-                </span>
+                <div class="title-wrap">
+                    <div class="title-mask"></div>
+                    <span>
+                        <h1>AMS</h1>
+                    </span>
+                </div>
             </div>
         </div>
     </section>
@@ -115,9 +124,12 @@
                 <span class="img-span">
                     <img src="img/portrait-img.jpg">
                 </span>
-                <span>
-                    <h1>AMS</h1>
-                </span>
+                <div class="title-wrap">
+                    <div class="title-mask"></div>
+                    <span>
+                        <h1>LDN</h1>
+                    </span>
+                </div>
             </div>
         </div>
     </section>
