homepage image animations

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     <section class="panel panel1">
         <div class="collection">
             <div class="collection-wrap">
-                <span class="img-span">
+                <div class="img-span">
                     <img src="img/portrait-img.jpg">
-                </span>
+                </div>
                 <div class="title-wrap">
                     <div class="title-mask"></div>
                     <span>
@@ -89,9 +89,9 @@
     <section class="panel panel2">
         <div class="collection">
             <div class="collection-wrap">
-                <span class="img-span">
+                <div class="img-span">
                     <img src="img/portrait-img.jpg">
-                </span>
+                </div>
                 <div class="title-wrap">
                     <div class="title-mask"></div>
                     <span>
@@ -105,9 +105,9 @@
     <section class="panel panel3">
         <div class="collection">
             <div class="collection-wrap">
-                <span class="img-span">
+                <div class="img-span">
                     <img src="img/portrait-img.jpg">
-                </span>
+                </div>
                 <div class="title-wrap">
                     <div class="title-mask"></div>
                     <span>
@@ -121,9 +121,9 @@
     <section class="panel panel4">
         <div class="collection">
             <div class="collection-wrap">
-                <span class="img-span">
+                <div class="img-span">
                     <img src="img/portrait-img.jpg">
-                </span>
+                </div>
                 <div class="title-wrap">
                     <div class="title-mask"></div>
                     <span>
