added title dates with animation

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                     <div class="title-mask"></div>
                     <span>
                         <h1>AMS</h1>
+                        <p class="date">2017</p>
                     </span>
                 </div>
             </div>
@@ -96,6 +97,7 @@
                     <div class="title-mask"></div>
                     <span>
                         <h1>LDN</h1>
+                        <p class="date">2017</p>
                     </span>
                 </div>
             </div>
@@ -112,6 +114,7 @@
                     <div class="title-mask"></div>
                     <span>
                         <h1>AMS</h1>
+                        <p class="date">2017</p>
                     </span>
                 </div>
             </div>
@@ -128,6 +131,7 @@
                     <div class="title-mask"></div>
                     <span>
                         <h1>LDN</h1>
+                        <p class="date">2017</p>
                     </span>
                 </div>
             </div>
