added homepage loader

--- a/profile.html
+++ b/profile.html
@@ -160,7 +160,7 @@
 <script src="js/parallax.js"></script>
 <script src="js/menu.js"></script>
 <script src="js/animation.js"></script>
-<script src="js/main.js"></script>
+<!-- <script src="js/main.js"></script> -->
 
 </body>
 
