--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <header>
+    <header id="main-header">
         <a href="#" class="social">Instagram</a>
         <a href="index.html"><h1><img src="img/logo-black.svg" alt="Old & New" class="logo"></h1></a>
         <div class="menu-area"> 
@@ -28,11 +28,7 @@
         </div>
     </header>
 
-    <div class="loader">
-        <div class="loader-line"></div>
-        <div class="loader-page--description">
-            <span><p>Stay</p></span><span><p>weird</p></span>
-        </div>
+    <div class="main-loader">
     </div>
 
     <!-- MENU -->
@@ -158,7 +154,7 @@
 <script src="js/scrollify.js"></script> 
 <script src="js/scroll.js"></script> 
 
-<script src="js/loader.js"></script>
+<!-- <script src="js/loader.js"></script> -->
 <script src="js/menu.js"></script>
 <script src="js/animation.js"></script>
 <script src="js/main.js"></script>
