--- a/index.html
+++ b/index.html
@@ -59,26 +59,34 @@
         <video src="img/test.mp4" width="1920" height="1080" autoplay="" loop="" muted="" playsinline=""></video>
     </section> -->
 
-    <ul class="pagination">
+    <!-- <ul class="pagination">
         <li><a class="" href="#first"></a></li>
         <li><a class="" href="#second"></a></li>
         <li><a class="" href="#third"></a></li>
         <li><a class="" href="#fourth"></a></li>
-    </ul>
+    </ul> -->
+
+    <div class="scroll-icon">
+
+        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M6 9l6 6 6-6"/></svg>
+
+    </div>
 
     <section class="panel panel1">
         <div class="collection">
             <div class="collection-wrap">
-                <div class="img-span">
-                    <img src="img/portrait-img.jpg">
-                </div>
-                <div class="title-wrap">
-                    <div class="title-mask"></div>
-                    <span>
-                        <h1>AMS</h1>
-                        <p class="date">2017</p>
-                    </span>
-                </div>
+                <a href="#">
+                    <div class="img-span">
+                        <img src="img/portrait-img.jpg">
+                    </div>
+                    <div class="title-wrap">
+                        <div class="title-mask"></div>
+                        <span>
+                            <h1>AMS</h1>
+                            <p class="date">2017</p>
+                        </span>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
@@ -86,16 +94,18 @@
     <section class="panel panel2">
         <div class="collection">
             <div class="collection-wrap">
-                <div class="img-span">
-                    <img src="img/portrait-img.jpg">
-                </div>
-                <div class="title-wrap">
-                    <div class="title-mask"></div>
-                    <span>
-                        <h1>LDN</h1>
-                        <p class="date">2017</p>
-                    </span>
-                </div>
+                <a href="#">
+                    <div class="img-span">
+                        <img src="img/portrait-img.jpg">
+                    </div>
+                    <div class="title-wrap">
+                        <div class="title-mask"></div>
+                        <span>
+                            <h1>LDN</h1>
+                            <p class="date">2017</p>
+                        </span>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
@@ -103,16 +113,18 @@
     <section class="panel panel3">
         <div class="collection">
             <div class="collection-wrap">
-                <div class="img-span">
-                    <img src="img/portrait-img.jpg">
-                </div>
-                <div class="title-wrap">
-                    <div class="title-mask"></div>
-                    <span>
-                        <h1>AMS</h1>
-                        <p class="date">2017</p>
-                    </span>
-                </div>
+                <a href="#">
+                    <div class="img-span">
+                        <img src="img/portrait-img.jpg">
+                    </div>
+                    <div class="title-wrap">
+                        <div class="title-mask"></div>
+                        <span>
+                            <h1>AMS</h1>
+                            <p class="date">2017</p>
+                        </span>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
@@ -120,33 +132,38 @@
     <section class="panel panel4">
         <div class="collection">
             <div class="collection-wrap">
-                <div class="img-span">
-                    <img src="img/portrait-img.jpg">
-                </div>
-                <div class="title-wrap">
-                    <div class="title-mask"></div>
-                    <span>
-                        <h1>LDN</h1>
-                        <p class="date">2017</p>
-                    </span>
-                </div>
+                <a href="#">
+                    <div class="img-span">
+                        <img src="img/portrait-img.jpg">
+                    </div>
+                    <div class="title-wrap">
+                        <div class="title-mask"></div>
+                        <span>
+                            <h1>LDN</h1>
+                            <p class="date">2017</p>
+                        </span>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
               
-
-    <!-- <footer>
-            <div class="footer-wrap">
-                <div class="social-links">
-                    <span><a href="#">EMAIL</a></span>
-                    <span><a href="#">INSTAGRAM</a></span>
-                    <span><a href="#">VSCO</a></span>
-                </div>
-                <div class="credit">
-                    <span><a class="coded-by">Code by</a></span> <span><a href="#">Jason Booth</a></span>
-                </div>
-            </div>  
-    </footer> -->
+    <section class="panel panel5" data-is-dark="true">
+        <div class="collection">
+            <footer class="home-footer">
+                    <div class="footer-wrap">
+                        <div class="social-links">
+                            <span><a href="#">EMAIL</a></span>
+                            <span><a href="#">INSTAGRAM</a></span>
+                            <span><a href="#">VSCO</a></span>
+                        </div>
+                        <div class="credit">
+                            <span><a class="coded-by">Code by</a></span> <span><a href="#">Jason Booth</a></span>
+                        </div>
+                    </div>  
+            </footer>
+        </div>
+    </section>
 
 
 
@@ -155,6 +172,7 @@
 <script src="js/scroll.js"></script> 
 
 <!-- <script src="js/loader.js"></script> -->
+<!-- <script src="js/data.js"></script> -->
 <script src="js/menu.js"></script>
 <script src="js/animation.js"></script>
 <script src="js/main.js"></script>
