cursor follow js added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <div class="main-loader">
     </div>
 
+    <div class="cursor"></div>
+
     <!-- MENU -->
     <div class="menu">
         <div class="menu-container">
@@ -75,7 +77,7 @@
     <section class="panel panel1">
         <div class="collection">
             <div class="collection-wrap">
-                <a href="#">
+                <a href="#" class="collection-link">
                     <div class="img-span">
                         <img src="img/portrait-img.jpg">
                     </div>
@@ -171,8 +173,8 @@
 <script src="js/scrollify.js"></script> 
 <script src="js/scroll.js"></script> 
 
-<!-- <script src="js/loader.js"></script> -->
 <!-- <script src="js/data.js"></script> -->
+<script src="js/cursor.js"></script>
 <script src="js/menu.js"></script>
 <script src="js/animation.js"></script>
 <script src="js/main.js"></script>
