--- a/index.html
+++ b/index.html
@@ -31,7 +31,23 @@
     <div class="main-loader">
     </div>
 
-    <div class="cursor"></div>
+    <div class="cursor">
+        <span>
+            <p>C</p>
+        </span>
+        <span>
+            <p>l</p>
+        </span>
+        <span>
+            <p>i</p>
+        </span>
+        <span>
+            <p>c</p>
+        </span>
+        <span>
+            <p>k</p>
+        </span>
+    </div>
 
     <!-- MENU -->
     <div class="menu">
@@ -96,7 +112,7 @@
     <section class="panel panel2">
         <div class="collection">
             <div class="collection-wrap">
-                <a href="#">
+                <a href="#" class="collection-link">
                     <div class="img-span">
                         <img src="img/portrait-img.jpg">
                     </div>
@@ -115,7 +131,7 @@
     <section class="panel panel3">
         <div class="collection">
             <div class="collection-wrap">
-                <a href="#">
+                <a href="#" class="collection-link">
                     <div class="img-span">
                         <img src="img/portrait-img.jpg">
                     </div>
@@ -134,7 +150,7 @@
     <section class="panel panel4">
         <div class="collection">
             <div class="collection-wrap">
-                <a href="#">
+                <a href="#" class="collection-link">
                     <div class="img-span">
                         <img src="img/portrait-img.jpg">
                     </div>
