added cursor hover state on homepage

--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
     </div>
 
     <div class="cursor">
-        <span>
-            <p>C</p>
-        </span>
-        <span>
-            <p>l</p>
-        </span>
-        <span>
-            <p>i</p>
-        </span>
-        <span>
-            <p>c</p>
-        </span>
-        <span>
-            <p>k</p>
-        </span>
+        <p>
+            <span>C</span>
+        </p>
+        <p>
+            <span>l</span>
+        </p>
+        <p>
+            <span>i</span>
+        </p>
+        <p>
+            <span>c</span>
+        </p>
+        <p>
+            <span>k</span>
+        </p>
     </div>
 
     <!-- MENU -->
