--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
             <span>C</span>
         </p>
         <p>
-            <span>l</span>
+            <span>L</span>
         </p>
         <p>
-            <span>i</span>
+            <span>I</span>
         </p>
         <p>
-            <span>c</span>
+            <span>C</span>
         </p>
         <p>
-            <span>k</span>
+            <span>K</span>
         </p>
     </div>
 
