added homepage coming soon graphic

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 
             <div class="menu-contact--links">
                 <a href="#">Email</a>
-                <a href="#">Vsco</a>
                 <a href="#">Instagram</a>
+                <a href="#">Vsco</a>
             </div>
 
         </div>
@@ -181,6 +181,7 @@
                     <div class="title-wrap">
                         <div class="title-mask"></div>
                         <span>
+                            <div class="project-coming--soon">Coming Soon</div>
                             <h1>LDN</h1>
                             <p class="date">2017</p>
                         </span>
