--- a/contact.html
+++ b/contact.html
@@ -118,8 +118,14 @@
         <section class="contact-hero"></section>
 
         <section class="contact-title">
-                <h1 class="contact-title--fullwidth"><span>Say</span><span>Hi</span></h1>
-                <div class="contact-info--wrap">
+                <h1 class="contact-title--fullwidth">Say Hi</h1>
+        </section>
+
+        <section>
+            <div class="contact-info--wrap">
+                    <div class="dot" data-parallax="-0.3"></div>
+                    <div class="dot-2" data-parallax="0.7"></div>
+                <div class="contact-info">
                     <div class="emoji">&#x1F4F8</div>
                     <p>If you're interested in working or collaborating together say hi! If not, get the fuck off my site.</p>
                     <div class="contact-page--links">
@@ -128,11 +134,8 @@
                         <span><a href="#">VSCO</a></span>
                     </div>
                 </div>
-
-                <div class="dot" data-parallax="-0.3"></div>
-                <div class="dot-2" data-parallax="0.7"></div>
+            </div>
         </section>
-
 
     </main>
 
@@ -153,7 +156,7 @@
 <script src="js/parallax-contact.js"></script>
 <script src="js/menu.js"></script>
 <script src="js/animation.js"></script>
-<script src="js/main.js"></script>
+<!-- <script src="js/main.js"></script> -->
 
 </body>
 
