added parallax tweaks

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <div class="title-wrap">
                         <div class="title-mask"></div>
                         <span>
-                            <h1>AMS</h1>
+                            <h1 class="titleparallax">AMS</h1>
                             <p class="date">2017</p>
                         </span>
                     </div>
@@ -182,7 +182,7 @@
                         <div class="title-mask"></div>
                         <span>
                             <div class="project-coming--soon">Coming Soon</div>
-                            <h1>LDN</h1>
+                            <h1 class="titleparallax">LDN</h1>
                             <p class="date">2017</p>
                         </span>
                     </div>
@@ -201,7 +201,7 @@
                     <div class="title-wrap">
                         <div class="title-mask"></div>
                         <span>
-                            <h1>AMS</h1>
+                            <h1 class="titleparallax">AMS</h1>
                             <p class="date">2017</p>
                         </span>
                     </div>
@@ -220,7 +220,7 @@
                     <div class="title-wrap">
                         <div class="title-mask"></div>
                         <span>
-                            <h1>LDN</h1>
+                            <h1 class="titleparallax">LDN</h1>
                             <p class="date">2017</p>
                         </span>
                     </div>
@@ -252,7 +252,7 @@
 <script src="js/scrollify.js"></script> 
 <script src="js/scroll.js"></script> 
 
-<!-- <script src="js/data.js"></script> -->
+<script src="js/parallax.js"></script>
 <script src="js/cursor.js"></script>
 <script src="js/menu.js"></script>
 <script src="js/animation.js"></script>
