homepage h1 tag hover and favicon added

--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
                     <div class="dot-2" data-parallax="0.7"></div>
                 <div class="contact-info">
                     <div class="emoji">&#x1F4F8</div>
-                    <p>If you're interested in working or collaborating together say hi! If not, get the fuck off my site.</p>
+                    <p>If you're interested in working or collaborating together say hi! If not, get the hell off my site.</p>
                     <div class="contact-page--links">
                         <span><a href="#">Email</a></span>
                         <span><a href="#">Instagram</a></span>
