--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="author" content="name">
         <meta name="description" content="description here">
         <meta name="keywords" content="keywords,here">
-        <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+        <link rel="icon" href="img/favion.png" type="image/vnd.microsoft.icon">
     </head>
 
 <body>
@@ -252,7 +252,6 @@
 <script src="js/scrollify.js"></script> 
 <script src="js/scroll.js"></script> 
 
-<script src="js/parallax.js"></script>
 <script src="js/cursor.js"></script>
 <script src="js/menu.js"></script>
 <script src="js/animation.js"></script>
