--- a/profile.html
+++ b/profile.html
@@ -129,6 +129,9 @@
 
         <section class="profile">
             <div class="profile-content">
+                <!-- <div class="parallax-img" data-parallax="0.5">
+                        <h2 class="bg-title">Background</h2>
+                </div> -->
                 <div class="parallax-img" data-parallax="-0.1">
                     <img src="img/portrait-img.jpg">
                 </div>
