added collection descriptor to homepage

--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
                 </a>
             </div>
         </div>
+        <div class="descriptor">
+            <p>35mm — 52.3105° N, 4.7683° E</p>
+        </div>
     </section>
 
     <section class="panel panel2">
