added sublogo and js file

--- a/contact.html
+++ b/contact.html
@@ -139,24 +139,34 @@
 
     </main>
 
-    <footer>
-            <div class="footer-wrap">
-                <div class="social-links">
-                    <span><a href="#">EMAIL</a></span>
-                    <span><a href="#">INSTAGRAM</a></span>
-                    <span><a href="#">VSCO</a></span>
-                </div>
-                <div class="credit">
-                    <span><a class="coded-by">Code by</a></span> <span><a href="#">Jason Booth</a></span>
-                </div>
-            </div>  
+
+    <footer class="contactpage-footer">
+        <!-- <div class="sublogo">
+            <div class="sublogo-wrap" data-speed="0.079">
+                <img src="img/stay-weird.svg">
+            </div>
+            <!-- <div class="sublogo-face" data-speed="0.09">
+                <img src="img/stay-weird-face.svg">
+            </div> -->
+        </div> -->
+
+        <div class="footer-wrap">
+            <div class="social-links">
+                <span><a href="#">EMAIL</a></span>
+                <span><a href="#">INSTAGRAM</a></span>
+                <span><a href="#">VSCO</a></span>
+            </div>
+            <div class="credit">
+                <span><a class="coded-by">Code by</a></span> <span><a href="#">Jason Booth</a></span>
+            </div>
+        </div>  
     </footer>
 
 <script src="js/loader.js"></script>
 <script src="js/parallax-contact.js"></script>
 <script src="js/menu.js"></script>
 <script src="js/animation.js"></script>
-<!-- <script src="js/main.js"></script> -->
+<script src="js/logomove.js"></script>
 
 </body>
 
