split scss into separate section and added footer logo move

--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
         </div>
     </div>
 
-    <main data-is-dark="true">
+    <main data-is-dark="true" class="main-contact">
         <section class="contact-hero"></section>
 
         <section class="contact-title">
@@ -141,14 +141,17 @@
 
 
     <footer class="contactpage-footer">
-        <!-- <div class="sublogo">
-            <div class="sublogo-wrap" data-speed="0.079">
+
+        <div class="logo-wrap">
+            <div class="spinner" data-speed="0.079">
                 <img src="img/stay-weird.svg">
             </div>
-            <!-- <div class="sublogo-face" data-speed="0.09">
+            <div class="face" data-speed="0.079">
                 <img src="img/stay-weird-face.svg">
-            </div> -->
-        </div> -->
+            </div>
+        </div>
+
+
 
         <div class="footer-wrap">
             <div class="social-links">
