--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
         <meta name="author" content="name">
         <meta name="description" content="description here">
         <meta name="keywords" content="keywords,here">
-        <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+        <link rel="shortcut icon" href="img/favion.png" type="image/vnd.microsoft.icon">
     </head>
 
 <body>
