--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
 
+    <!-- HEADER -->
     <header id="main-header">
         <a href="#" class="social" id="insta">Instagram</a>
         <a href="index.html">
@@ -84,9 +85,11 @@
         </div>
     </header>
 
+    <!-- LOADER -->
     <div class="main-loader">
     </div>
 
+    <!-- CURSOR -->
     <div class="cursor">
         <p>
             <span>C</span>
@@ -135,23 +138,14 @@
         </div>
     </div>
 
-    <!-- <section class="video-container">
-        <video src="img/test.mp4" width="1920" height="1080" autoplay="" loop="" muted="" playsinline=""></video>
-    </section> -->
-
-    <!-- <ul class="pagination">
-        <li><a class="" href="#first"></a></li>
-        <li><a class="" href="#second"></a></li>
-        <li><a class="" href="#third"></a></li>
-        <li><a class="" href="#fourth"></a></li>
-    </ul> -->
-
+    <!-- SCROLL DOWN ICON -->
     <div class="scroll-icon">
 
         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M6 9l6 6 6-6"/></svg>
 
     </div>
 
+    <!-- SECTION -->
     <section class="panel panel1">
         <div class="collection">
             <div class="collection-wrap">
@@ -169,9 +163,9 @@
                 </a>
             </div>
         </div>
-        <div class="descriptor">
+        <!-- <div class="descriptor">
             <p>35mm — 52.3105° N, 4.7683° E</p>
-        </div>
+        </div> -->
     </section>
 
     <section class="panel panel2">
