added collection title animation

--- a/collections/portugal.html
+++ b/collections/portugal.html
@@ -122,7 +122,7 @@
     <section class="testing">
     <section class="collection-title">
         <div class="title-wrap">
-            <div class="parallax-title first" data-depth="0.6">AMS</div>
+            <div class="parallax-title first" data-depth="0.6"><p><span>A</span></p><p><span>M</span></p><p><span>S</span></p></div>
         </div>
     </section>
     </section>
@@ -196,6 +196,7 @@
     <script src="../js/animation.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/transform.js"></script>
+    <script src="../js/collectiontitle.js"></script>
 
 </body>
 </html>
