page loader updated

--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,14 @@
 
 <body>
 
-    <div class="progress"></div>
+    <!-- <div class="progress"></div> -->
     <div class="loader">
-        <div class="loader-line"></div>
-        <div class="loader-page--description">
-            <span><p>Stay</p></span><span><p>weird</p></span>
+        <div class="loader-line--wrap">
+            <div class="loader-line"></div>
         </div>
+        <!-- <div class="loader-page--description">
+            <span><p>Stay</p></span><span><p>weird</p></span>
+        </div> -->
     </div>
 
     <header>
