--- a/profile.html
+++ b/profile.html
@@ -15,14 +15,17 @@
 
 <body>
 
-    <div class="progress"></div>
+    <!-- <div class="progress"></div> -->
     <div class="loader">
-        <div class="loader-line"></div>
-        <div class="loader-page--description">
-            <span><p>Stay</p></span><span><p>weird</p></span>
+        <div class="loader-line--wrap">
+            <div class="loader-line"></div>
         </div>
+        <!-- <div class="loader-page--description">
+            <span><p>Stay</p></span><span><p>weird</p></span>
+        </div> -->
     </div>
 
+    <!-- HEADER -->
     <header>
         <a href="#" class="social-about">Instagram</a>
         <a href="index.html"><h1>
