added footer to collections page

--- a/collections/portugal.html
+++ b/collections/portugal.html
@@ -86,7 +86,10 @@
     </header>
 
     <!-- LOADER -->
-    <div class="main-loader">
+    <div class="loader">
+        <div class="loader-line--wrap">
+            <div class="loader-line"></div>
+        </div>
     </div>
 
     <!-- MENU -->
@@ -122,7 +125,7 @@
     <section class="testing">
     <section class="collection-title">
         <div class="title-wrap">
-            <div class="parallax-title first" data-depth="0.6"><p><span>A</span></p><p><span>M</span></p><p><span>S</span></p></div>
+            <div class="parallax-title first" data-depth="0.6">AMS</div>
         </div>
     </section>
     </section>
@@ -191,12 +194,26 @@
         </section>
     </main>
 
+    <footer class="collections">
+        <div class="footer-wrap">
+            <div class="social-links">
+                <span><a href="#">EMAIL</a></span>
+                <span><a href="#">INSTAGRAM</a></span>
+                <span><a href="#">VSCO</a></span>
+            </div>
+            <div class="credit">
+                <span><a class="coded-by">Code by</a></span> <span><a href="#">Jason Booth</a></span>
+            </div>
+        </div>  
+    </footer>
+    
 
+    <script src="../js/loader.js"></script>
     <script src="../js/menu.js"></script>
     <script src="../js/animation.js"></script>
-    <script src="../js/main.js"></script>
+    <!-- <script src="../js/main.js"></script> -->
     <script src="../js/transform.js"></script>
-    <script src="../js/collectiontitle.js"></script>
+    <!-- <script src="../js/collectiontitle.js"></script> -->
 
 </body>
 </html>
