added redirect js file for the homepage

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <section class="panel panel1">
         <div class="collection">
             <div class="collection-wrap">
-                <a href="#" class="collection-link">
+                <a class="collection-link">
                     <div class="img-span">
                         <img src="img/portrait-img.jpg">
                     </div>
@@ -249,6 +249,7 @@
 <script src="js/scrollify.js"></script> 
 <script src="js/scroll.js"></script> 
 
+<script src="js/redirect.js"></script>
 <script src="js/cursor.js"></script>
 <script src="js/menu.js"></script>
 <script src="js/animation.js"></script>
