added section title animation on click

--- a/collections/portugal.html
+++ b/collections/portugal.html
@@ -86,11 +86,11 @@
     </header>
 
     <!-- LOADER -->
-    <div class="loader">
+    <!-- <div class="loader">
         <div class="loader-line--wrap">
             <div class="loader-line"></div>
         </div>
-    </div>
+    </div> -->
 
     <!-- MENU -->
     <div class="menu">
