--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
             <div class="collection-wrap">
                 <a class="collection-link">
                     <div class="img-span">
-                        <img src="img/portrait-img.jpg">
+                        <img src="img/portrait-img.jpg" class="one">
                     </div>
                     <div class="title-wrap">
                         <div class="title-mask"></div>
                         <span>
-                            <h1 class="titleparallax">AMS</h1>
+                            <h1 class="titleparallax"><span>A</span><span>M</span><span>S</span></h1>
                             <p class="date">2017</p>
                         </span>
                     </div>
@@ -249,6 +249,7 @@
 <script src="js/scrollify.js"></script> 
 <script src="js/scroll.js"></script> 
 
+<!-- <script src="js/collectiontitle.js"></script> -->
 <script src="js/redirect.js"></script>
 <script src="js/cursor.js"></script>
 <script src="js/menu.js"></script>
